se refactorizo
